--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,26 @@ h1 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
+h2 {
+	color: #4aaaa5;
+	font-size: 20px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
 nav {
 	background-color: #ffffff;
 	height: 70px;
-	border-bottom: red;
+	/*border-bottom: red;*/
+	/*text-indent: 30px;*/
 	/*border-width: 5px;*/
 	/*vertical-align: middle;*/
+}
+
+p {
+	color: #777777;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 18px;
+	/*justify-content: left;*/
 }
 
 a:link {
@@ -26,31 +40,6 @@ a:hover {
     color: hotpink;
     /*border: 10px;*/
     /*border-color: red;*/
-}
-
-
-#nameNav:hover {
-    color: hotpink;
-}
-
-#profilePic {
-    width: 200px;
-    float: left;
-}
-
-/*This is just jused for the name title in the nav bar*/
-#nameNav {
-	float: left;
-	background-color: #4aaaa5;
-	padding: 30px;
-	border-right: 300px
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-weight: : bold;
-	font-size: 30px;
-	color: #ffffff;
-	text-orientation: center;
-
-
 }
 
 /*This is for elements of the nav bar apart from the name*/
@@ -64,3 +53,70 @@ a:hover {
 	/*border-color: red;*/
 
 }
+
+.sidebar {
+	position: absolute;
+	top: 105px;
+	left: 780px;
+	height: 115px;
+	width: 190px;
+	padding: 10px;
+	/*border: 5px;*/
+	margin: 20px;
+	background-color: #ffffff;
+
+}
+
+.icon{
+	width: 45px;
+	padding: 5px;
+}
+
+/*This is just jused for the name title in the nav bar*/
+#nameNav {
+	float: left;
+	position: absolute;
+	left: 150px;
+	background-color: #4aaaa5;
+	padding: 20px 30px;
+	/*border-right: 30px*/
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-weight: : bold;
+	font-size: 30px;
+	color: #ffffff;
+	text-orientation: center;
+	border-left: 30px;
+
+
+}
+
+#nameNav:hover {
+    color: hotpink;
+}
+
+#rightNav {
+	position: absolute;
+	left: 800px;
+}
+
+#profilePic {
+    width: 150px;
+    float: left;
+    padding: 10px;
+}
+
+#aboutMe {
+	position: absolute;
+	left: 130px;
+	top: 105px;
+	height: 400px;
+	width: 550px;
+	padding: 10px;
+	/*border: 5px;*/
+	margin: 20px;
+	background-color: #ffffff;
+}
+
+
+
+
