--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,17 +8,27 @@ h1 {
 	color: #4aaaa5;
 	font-size: 30px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	border-bottom: solid #cccccc;
+    border-width: 2px;
+    padding-bottom: 10px;
+    margin: 0px 20px;
 }
 
 h2 {
 	color: #4aaaa5;
 	font-size: 20px;
+	text-align: center;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	border-bottom: solid #cccccc;
+    border-width: 2px;
+    padding-bottom: 20px;
 }
 
 nav {
 	background-color: #ffffff;
 	height: 70px;
+	border-bottom: solid #cccccc;
+    border-width: 2px;
 	/*border-bottom: red;*/
 	/*text-indent: 30px;*/
 	/*border-width: 5px;*/
@@ -29,6 +39,11 @@ p {
 	color: #777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 18px;
+	line-height: 24px;
+	text-align: justify;
+	padding-top: 20px;
+	margin: 0px 20px 0px 20px;
+
 	/*justify-content: left;*/
 }
 
@@ -40,6 +55,28 @@ a:hover {
     color: hotpink;
     /*border: 10px;*/
     /*border-color: red;*/
+}
+
+footer {
+
+ 	position: fixed;
+ 	bottom: 0;
+ 	left: 0;
+ 	height: 110px;
+ 	background-color: white;
+ 	width: 100%;
+	float: left;
+	clear: both;
+	height: 40px;
+	color: #777777;
+	text-orientation: center;
+	background-color: #666666;
+	/*border-top: 4px;*/
+	/*border-color: solid: #4aaaa5;*/
+	padding: 30px;
+	border-style: solid;
+    border-top: thick double #4aaaa5;
+
 }
 
 /*This is for elements of the nav bar apart from the name*/
@@ -57,10 +94,10 @@ a:hover {
 .sidebar {
 	position: absolute;
 	top: 105px;
-	left: 780px;
-	height: 115px;
-	width: 190px;
-	padding: 10px;
+	left: 700px;
+	height: 110px;
+	width: 180px;
+	padding: 20px;
 	/*border: 5px;*/
 	margin: 20px;
 	background-color: #ffffff;
@@ -69,14 +106,19 @@ a:hover {
 
 .icon{
 	width: 45px;
-	padding: 5px;
+	padding: 20px 5px 5px 5px;
+	opacity: 0.8;
+}
+
+.icon:hover {
+	opacity: 1.0;
 }
 
 /*This is just jused for the name title in the nav bar*/
 #nameNav {
 	float: left;
 	position: absolute;
-	left: 150px;
+	left: 70px;
 	background-color: #4aaaa5;
 	padding: 20px 30px;
 	/*border-right: 30px*/
@@ -96,25 +138,41 @@ a:hover {
 
 #rightNav {
 	position: absolute;
-	left: 800px;
+	left: 720px;
 }
+
+/*This is just to add the little lines between the three links on the nav bar*/
+/*#portfolioNav {
+	border: dotted; #555555;
+    border-width: 0px 1px 0px 1px;
+}*/
 
 #profilePic {
     width: 150px;
     float: left;
-    padding: 10px;
+    clear: left;
+    padding: 20px;
 }
 
 #aboutMe {
 	position: absolute;
-	left: 130px;
+	left: 50px;
 	top: 105px;
 	height: 400px;
 	width: 550px;
-	padding: 10px;
+	padding: 20px;
 	/*border: 5px;*/
 	margin: 20px;
 	background-color: #ffffff;
+}
+
+#footerText {
+	color: #cccccc;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 10px;
+	line-height: 24px;
+	text-align: center;
+	padding: 20px;
 }
 
 
