--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,18 +62,18 @@ footer {
  	position: fixed;
  	bottom: 0;
  	left: 0;
- 	height: 110px;
+ 	height: 60px;
  	background-color: white;
  	width: 100%;
 	float: left;
 	clear: both;
-	height: 40px;
+	/*height: 30px;*/
 	color: #777777;
 	text-orientation: center;
 	background-color: #666666;
 	/*border-top: 4px;*/
 	/*border-color: solid: #4aaaa5;*/
-	padding: 30px;
+	/*padding-bottom: : 30px;*/
 	border-style: solid;
     border-top: thick double #4aaaa5;
 
@@ -172,7 +172,6 @@ footer {
 	font-size: 10px;
 	line-height: 24px;
 	text-align: center;
-	padding: 20px;
 }
 
 
