--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+/*This is organized by type. I've tried to make the names self-explanatory, so there are fewer commnets. 
+I've commented out some mis-steps.*/
+
+
 body {
 	min-width: 960px;
 	background-image: url("../images/candyhole.png");
@@ -24,11 +28,23 @@ h2 {
     padding-bottom: 20px;
 }
 
+label {
+	color: #777777;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 16px;
+	line-height: 18px;
+	font-weight: bold;
+	/*padding-top: : 20px;*/
+	/*margin-top: 20px;*/
+
+}
+
 nav {
 	background-color: #ffffff;
 	height: 70px;
 	border-bottom: solid #cccccc;
     border-width: 2px;
+	font-size: 16px;
 	/*border-bottom: red;*/
 	/*text-indent: 30px;*/
 	/*border-width: 5px;*/
@@ -52,7 +68,7 @@ a:link {
 }
 
 a:hover {
-    color: hotpink;
+    color: #4aaaa5;
     /*border: 10px;*/
     /*border-color: red;*/
 }
@@ -77,6 +93,32 @@ footer {
 	border-top: 4px solid #4aaaa5;
     /*border-top: thick double #4aaaa5;*/
 
+}
+
+form {
+	padding: 20px;
+}
+
+
+
+input {
+    width: 100%;
+    color: #777777;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 18px;
+	/*border-style: 20px;*/
+	border-color: #cccccc;
+	padding: 3px;
+}
+
+textarea {
+    width: 100%;
+    color: #777777;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 18px;
+	/*border-style: 20px;*/
+	border-color: #cccccc;
+	padding: 3px;
 }
 
 /*This is for elements of the nav bar apart from the name*/
@@ -104,7 +146,7 @@ footer {
 
 }
 
-.icon{
+.icon {
 	width: 45px;
 	padding: 20px 5px 5px 5px;
 	opacity: 0.8;
@@ -112,6 +154,26 @@ footer {
 
 .icon:hover {
 	opacity: 1.0;
+}
+
+.button {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+    background-color: #4aaaa5;
+    width: 160px;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    /*font-weight: bold;*/
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.button:select {
+   color: red
 }
 
 /*This is just jused for the name title in the nav bar*/
@@ -133,7 +195,8 @@ footer {
 }
 
 #nameNav:hover {
-    color: hotpink;
+    color: #4aaaa5;
+    background-color: #ffffff;
 }
 
 #rightNav {
@@ -168,6 +231,24 @@ footer {
     padding: 20px;
 }
 
+#portfolioRight1 {
+	background-image: url('../images/port2.jpg');
+	width: 234px;
+	height: 178px;
+    float: right;
+    clear: right;
+    padding: 20px;
+}
+
+#portfolioLeft1 {
+	background-image: url('../images/port1.jpg');
+	width: 234px;
+	height: 178px;
+    float: left;
+    clear: left;
+    padding: 20px;
+}
+
 #aboutMe {
 	position: absolute;
 	left: 50px;
@@ -185,6 +266,18 @@ footer {
 	left: 50px;
 	top: 105px;
 	height: 684px;
+	width: 550px;
+	padding: 20px;
+	/*border: 5px;*/
+	margin: 20px;
+	background-color: #ffffff;
+}
+
+#contact {
+	position: absolute;
+	left: 50px;
+	top: 105px;
+	height: 500px;
 	width: 550px;
 	padding: 20px;
 	/*border: 5px;*/
